# udot-colors

./: pyproject.toml
src/udot_colors/: udot_colors.py  udot_palettes.py
tests/: test_scales.py
udotcolors/: __init__.py  colors.py  palettes.py  udotcolors.py  udotpalettes.py
udotcolors/plotnine/: __init__.py  palettes.py  scales.py
udotcolors/seaborn/: __init__.py  palettes.py
